jEdit 5.0 version history
       (changes since jEdit 4.5.2)
:encoding=UTF-8:

{{{ Version 5.0pre2

Thanks to Jarek Czekalski, Eric Le Lay, Matthieu Casanova, Tom Power, Malathi,
Thomas Meyer, Vladimir Avondin, Björn "Vampire" Kautler, and Alan Ezust for
contributing to this release. 

{{{ Bug fixes

- I/O Error on First Save Attempt (#3574500 Jarek Czekalski) 

- Fixed a number of scrollbar bugs related to undo, multiline cut,
  soft-wrap, and folding.
  (Patch#3567959, Bugs #2832769, #2998294, and #3193168 - Thomas Meyer)

- Fix keymap duplication handling (Björn "Vampire" Kautler)

- Fix broken macro Files/Glob_close.bsh (Eric Le Lay)

- File status checking before save (#3562315, Alan Ezust)

- Fix "Customize This Menu..." item in context menu options (#3554895 Tom Power)

- Fixed the StandaloneTextArea that cannot load keymaps
  (#3562023 Matthieu Casanova)

- Fix a case where a NPE occurs when removing a plugin
  (#3557441 Matthieu Casanova)

- Recognizing "Extra word characters" in "Whole word" option in
  searches (bug #3522497, patch #3543524 Malathi)

- The macro Display_Abbreviations was broken (#3539691 Matthieu Casanova)

- Fix pressing return in parent files of the VFS browser that do not
  browse the selected folder as it should (patch #3543499 by Eric Le Lay)

}}}
{{{ API

- New method MiscUtilities.openInDesktop() (Alan Ezust)

}}}
{{{ UI

- Disable menu bar mnemonics if they are mapped as otherwise defined shortcuts
  so that they are not shown visually to the user when they actually do not
  work and make sure that no conflict can arise with the default keymap and
  any localization (#3528208 Björn "Vampire" Kautler)

- Added a new German keymap. Replaced shortcuts that were unreachable
  on a german keyboard. Moved shortcuts from German localization into
  keymap. (#3572796 Björn "Vampire" Kautler)

- Translate underscores to spaces when displaying keymap names in the UI to
  eliminate files with spaces in the name. (Björn "Vampire" Kautler)
